# Domain-Suggester

./: .gitignore  Cargo.toml  README.md  build.rs  criteria.json
src/: credentials.rs  main.rs  worker.rs
src/domain/: dns.rs  mod.rs  rdap.rs  tld.rs  whoisfreaks.rs
src/llm/: mod.rs  ollama.rs  openrouter.rs  prompt.rs
src/ui/: input_panel.rs  mod.rs  results_table.rs  settings_panel.rs  theme.rs
