[package]
name = "domain-suggest"
version = "0.1.0"
edition = "2021"

[dependencies]
# GUI
eframe = "0.31"
egui_extras = { version = "0.31", features = ["all_loaders"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Secure credential storage
keyring = { version = "3", features = ["sync-secret-service"] }

# Error handling
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Async trait support
async-trait = "0.1"

# Image loading for egui
image = { version = "0.25", default-features = false, features = ["png"] }
rfd = "0.17.2"

[build-dependencies]
winres = "0.1.12"
